// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageView component snapshot 1`] = `
<div
  className="ImageViewOuterContainer"
  style={
    Object {
      "maxWidth": 640,
    }
  }
>
  <div
    className="ImageViewInnerContainer ImageViewFamilyContainerBorderStyles ImageViewFamilyContainerShadowStyles ImageViewFamilyContainerBackgroundStyles"
  >
    <div
      className="ImageViewImgContainer"
    >
      <img
        alt="This is a caption"
        className="ImageViewFamilyImgLayoutStyles ImageViewFamilyImgBorderStyles"
        height={640}
        src="somesite.com/image.png"
        width={640}
      />
    </div>
    <div
      className="ImageViewFamilyCaptionContainerStyles"
    >
      <div
        className="CaptionContainer"
        data-testid="CaptionComponentTestId"
        style={
          Object {
            "maxWidth": 640,
          }
        }
      >
        <div
          className="IconContainer"
        >
          <i
            aria-hidden="true"
            className="image icon"
            onClick={[Function]}
          />
        </div>
        <p
          className="ContentPageCaptionTextSize CaptionText"
        >
          This is a caption
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageView component with image credit string snapshot 1`] = `
<div
  className="ImageViewOuterContainer"
  style={
    Object {
      "maxWidth": 640,
    }
  }
>
  <div
    className="ImageViewInnerContainer ImageViewFamilyContainerBorderStyles ImageViewFamilyContainerShadowStyles ImageViewFamilyContainerBackgroundStyles"
  >
    <div
      className="ImageViewImgContainer"
    >
      <img
        alt="This is a caption"
        className="ImageViewFamilyImgLayoutStyles ImageViewFamilyImgBorderStyles"
        height={640}
        src="somesite.com/image.png"
        width={640}
      />
    </div>
    <div
      className="ImageViewFamilyCaptionContainerStyles"
    >
      <div
        className="CaptionContainer"
        data-testid="CaptionComponentTestId"
        style={
          Object {
            "maxWidth": 640,
          }
        }
      >
        <div
          className="IconContainer"
        >
          <i
            aria-hidden="true"
            className="image icon"
            onClick={[Function]}
          />
        </div>
        <p
          className="ContentPageCaptionTextSize CaptionText"
        >
          This is a caption (Image credit: Image God)
        </p>
      </div>
    </div>
  </div>
</div>
`;
